added image watermark

--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 
 .hero {
   padding: 7rem 0 10rem 0;
-  background: #808429;
+  background-image: url(/images/_MG_9088\ copy.jpg);
   margin-bottom: 100px; }
   .hero.hero-inner {
     padding: 9rem 0 7rem 0;
